--- a/app/globals.css
+++ b/app/globals.css
@@ -59,22 +59,24 @@ button{
   display: none;
 }
 
-/* Custom scrollbar style */
-.custom-scrollbar {
-  scrollbar-width: thin; 
-  scrollbar-color: #f43f5e transparent; 
+.admin-container {
+  min-height: 100vh;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1px;
+  padding-right: 1px;
 }
 
-.custom-scrollbar::-webkit-scrollbar {
-  width: 2px;
-  height: 2px;
+@media (min-width: 640px) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #df6479;
-  border-radius: 10px;
+@media (min-width: 1024px) {
+  .container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
