--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,24 @@ button{
 .noscrollbar::-webkit-scrollbar {
   display: none;
 }
+/* Add this to your globals.css */
+.custom-scrollbar::-webkit-scrollbar {
+  height: 8px;
+}
 
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 .admin-container {
   min-height: 100vh;
   padding-top: 2rem;
