--- a/app/globals.css
+++ b/app/globals.css
@@ -78,22 +78,26 @@ button{
 }
 .admin-container {
   min-height: 100vh;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  padding-left: 1px;
-  padding-right: 1px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 @media (min-width: 640px) {
-  .container {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+ .admin-container {
+      padding-top: 16px;
+  padding-bottom: 16px;
+    padding-left:16px;
+    padding-right: 16px;
   }
 }
 
 @media (min-width: 1024px) {
-  .container {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .admin-container {
+     padding-top: 22px;
+  padding-bottom: 22px;
+    padding-left: 22px;
+    padding-right: 22px;
   }
 }
